# griotte

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  _CoqProject  _RocqProject  dune  dune-project  flake.nix  opam  pretty-print-trace.sh
theories/: addr_reg.v  addr_reg_sample.v  asm_cerise.v  assumptions.v  bitblast.v  cap_lang.v  dune  fundamental.v  iris_extra.v  logrel.v  logrel_extra.v  machine_base.v  machine_parameters.v  machine_run.v  machine_utils_extra.v  monotone.v  monotone_resource.v  multiple_updates.v  region.v  region_invariants.v  region_invariants_allocation.v  region_invariants_batch_uninitialized.v  region_invariants_definitions.v  region_invariants_frozen.v  region_invariants_revocation.v  region_invariants_static.v  region_invariants_transitions.v  rules.v  seal_store.v  stdpp_extra.v  sts.v  wp_rules_interp.v
theories/case_studies/: adequacy_helpers.v  compartment_layout.v  switcher_adequacy.v  template_adequacy.v
theories/examples/: addr_reg_sample.v  adequacy.v  arch_sealing.v  awkward_example_adequacy.v  awkward_example_extra.v  awkward_example_helpers.v  awkward_example_preamble.v  awkward_example_u.v  compartment_layout.v  contiguous.v  disjoint_regions_tactics.v  getotype.v  region_macros.v  stack_macros_helpers.v  switcher.v
theories/ftlr/: AddSubLt.v  BinOp.v  Get.v  IsPtr.v  Jalr.v  Jmp.v  JmpCap.v  Jnz.v  Lea.v  Load.v  LoadU.v  Mov.v  PromoteU.v  ReadSR.v  Restrict.v  Seal.v  Store.v  StoreU.v  Subseg.v  UnSeal.v  WriteSR.v  ftlr_base.v  ftlr_switcher_call.v  ftlr_switcher_return.v  interp_weakening.v
theories/logrel/: call_stack.v  fundamental.v  logrel.v  logrel_extra.v  monotone.v  seal_store.v  stack_world_resources.v  world_interp_stack.v  wp_rules_interp.v
theories/model/: model_interp_stack.v  multiple_updates.v  region_invariants.v  region_invariants_allocation.v  region_invariants_allocation_compartments.v  region_invariants_definitions.v  region_invariants_revocation.v  sealing_invariants.v  sts.v  sts_multiple_updates.v  world_ghost_resources.v  world_ghost_theory.v  world_ghost_theory_interface.v  world_ghost_theory_interface_post_logrel.v  world_interp_allocation_compartments.v  world_interp_stack.v  world_std_revocation.v  world_std_sts.v
theories/opsem/: addr_reg.v  addresses.v  assembler.v  cap_lang.v  griotte_opsem.v  griotte_opsem_prop.v  machine_base.v  machine_instructions.v  machine_parameters.v  machine_run.v  machine_word.v  memory.v  otypes.v  permissions.v  register_file.v  registers.v
theories/program_logic/: cerise_instance.v  entry.v  griotte_lang.v  memory_region.v  rules.v
theories/proofmode/: class_instances.v  classes.v  contiguous.v  disjoint_regions_tactics.v  map_simpl.v  map_simpl_test.v  mkregion_helpers.v  proofmode.v  proofmode_instr_rules.v  solve_addr.v  solve_addr_extra.v  solve_pure.v  tactics_helpers.v
theories/rules/: rules_AddSubLt.v  rules_Get.v  rules_IsPtr.v  rules_Jalr.v  rules_Jmp.v  rules_JmpCap.v  rules_Jnz.v  rules_Lea.v  rules_Load.v  rules_LoadU.v  rules_LoadU_derived.v  rules_Mov.v  rules_PromoteU.v  rules_PromoteU_derived.v  rules_ReadSR.v  rules_Restrict.v  rules_Seal.v  rules_Store.v  rules_StoreU.v  rules_StoreU_derived.v  rules_Subseg.v  rules_UnSeal.v  rules_WriteSR.v  rules_base.v
theories/switcher/: clear_registers.v  clear_registers_spec.v  clear_stack.v  clear_stack_spec.v  interp_switcher_call.v  interp_switcher_return.v  switcher.v  switcher_helpers.v  switcher_macros_spec.v  switcher_preamble.v  (+6 more)
(+425 files in other folders)
