(include_subdirs qualified)

(coq.theory
 (name cap_machine)
 (package griotte)
 (coqdoc_flags
  --utf8 --parse-comments --toc --lib-subtitles
  --external https://plv.mpi-sws.org/coqdoc/stdpp/ stdpp
  --external https://plv.mpi-sws.org/coqdoc/iris/ iris)
;  (flags :standard
;         -w -notation-incompatible-prefix
;         -w -notation-overridden
;         -w -redundant-canonical-projection
; -arg -w -arg -convert_concl_no_check
; -arg -w -arg -several-object-files
; -arg -w -arg -ssr-search-moved
; -arg -w -arg -deprecated-instance-without-locality

;  )
 (theories stdpp iris Ltac2 Equations Stdlib machine_utils)
)
